bug(style): Fix non-visible cursor on top of the page

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -13,6 +13,10 @@
     scroll-behavior: smooth;
   }
 
+  #root {
+    display: flex;
+  }
+
   body {
     @apply font-body box-border;
   }
